# myCVEs

./: .gitignore  Dockerfile  Dockerrfile  README.md  docker-compose.yml  pyproject.toml  sample_job.yaml
jobs/: cisco.yaml  fortinet.yaml
mycves/: api.py  config.py  container.py  data_parser.py  errors.py  formatters.py  jobs_.py  mail.py  main.py  requirements.txt  typing.py
settings/: .secrets.yaml  last_run.yaml  settings.yaml
src/: api.py  config.py  container.py  data_parser.py  errors.py  formatters.py  jobs_.py  logger.py  mail.py  main.py  requirements.txt
templates/: cves.html  email.html  macros.html  outlook_email.html  overview.html  title.html
tests/: testcenter.py
